@@ -2,8 +2,8 @@
 {% load staticfiles %}
 {% load i18n %}
 
-{% block title %}{% trans "Archive" %}{% endblock %}
-{% block header %}{% trans "Archive" %} &nbsp; <i class="fa fa-calendar-check-o"></i>{% endblock %}
+{% block title %}{% trans "Day archive" %}{% endblock %}
+{% block header %}{% trans "Day archive" %} &nbsp; <i class="fa fa-calendar-check-o"></i>{% endblock %}
 
 {% block content %}
 <!-- Main content -->
