@@ -74,12 +74,12 @@
                         </li>
                         <li>
                             <a href="{% url 'frontend:history' %}">
-                                <i class="fa fa-line-chart"></i> <span>{% trans "Recent" %}</span>
+                                <i class="fa fa-line-chart"></i> <span>{% trans "History" %}</span>
                             </a>
                         </li>
                         <li>
                             <a href="{% url 'frontend:archive' %}">
-                                <i class="fa fa-calendar-check-o"></i> <span>{% trans "Archive" %}</span>
+                                <i class="fa fa-calendar-check-o"></i> <span>{% trans "Day archive" %}</span>
                             </a>
                         </li>
                         <li>
