@@ -2,8 +2,8 @@
 {% load staticfiles %}
 {% load i18n %}
 
-{% block title %}{% trans "Recent" %}{% endblock %}
-{% block header %}{% trans "Recent" %} &nbsp; <i class="fa fa-line-chart"></i>{% endblock %}
+{% block title %}{% trans "History" %}{% endblock %}
+{% block header %}{% trans "History" %} &nbsp; <i class="fa fa-line-chart"></i>{% endblock %}
 
 {% block content %}
 <!-- Main content -->
@@ -14,12 +14,60 @@
     </div>
 {% endif %}
 
+    {% if capabilities.any and statistics_summary %}
+    <div class="row consumption-block">
+        <div class="col-md-12">
+            <div class="panel">
+                <header class="panel-heading">
+                    {% blocktrans %}Summary of past {{ days_ago }} days{% endblocktrans %}
+                </header>
+                <div class="panel-body">
+                    <table class="table table-condensed">
+                        <tr>
+                            <th class="col-md-6"></th>
+                            <th class="col-md-2">{% if capabilities.electricity %}{% trans "Delivered" %} ({% trans "kWh" noop %}{% if capabilities.gas %} / {% trans "m<sup>3</sup>" noop %}{% endif %}){% endif %}</th>
+                            <th class="col-md-2">{% if capabilities.electricity_returned %}{% trans "Returned" %} ({% trans "kWh" noop %}){% endif %}</th>
+                            <th class="col-md-2">{% trans "Cost" %} (&euro;)</th>
+                        </tr>
+                        <tr>
+                            <td>{% if capabilities.electricity %}{% trans "Electricity 1 (off-peak)" %}{% endif %}</td>
+                            <td><span class="badge bg-red">{% if capabilities.electricity %}{{ statistics_summary.total_electricity1|default:'-' }} </span>{% endif %}</td>
+                            <td><span class="badge bg-green">{% if capabilities.electricity_returned %}{{ statistics_summary.total_electricity1_returned|default:'-' }}{% endif %}</span></td>
+                            <td><span class="badge bg-black">{% if capabilities.electricity %}{{ statistics_summary.total_electricity1_cost|default:'-' }}{% endif %}</span></td>
+                        </tr>
+                        <tr>
+                            <td>{% if capabilities.electricity %}{% trans "Electricity 2 (peak)" %}{% endif %}</td>
+                            <td><span class="badge bg-red">{% if capabilities.electricity %}{{ statistics_summary.total_electricity2|default:'-' }}{% endif %}</span></td>
+                            <td><span class="badge bg-green">{% if capabilities.electricity_returned %}{{ statistics_summary.total_electricity2_returned|default:'-' }}{% endif %}</span></td>
+                            <td><span class="badge bg-black">{% if capabilities.electricity %}{{ statistics_summary.total_electricity2_cost|default:'-' }}{% endif %}</span></td>
+                        </tr>
+                        {% if capabilities.gas %}
+                        <tr>
+                            <td>{% trans "Gas" %}</td>
+                            <td><span class="badge bg-orange">{{ statistics_summary.total_gas|default:'-' }}</span></td>
+                            <td>&nbsp;</td>
+                            <td><span class="badge bg-black">{{ statistics_summary.total_gas_cost|default:'-' }}</span></td>
+                        </tr>
+                        {% endif %}
+                        <tr>
+                            <td style="font-weight: bold;">{% trans "Total" %}</td>
+                            <td colspan="2">&nbsp;</td>
+                            <td><span class="badge bg-black">{{ statistics_summary.total_cost|default:'-' }}</span></td>
+                        </tr>
+                    </table>                
+                </div><!-- /.panel-body -->
+            </div><!-- /.panel -->
+        </div><!-- /.col -->
+    </div><!-- /.row -->
+    {% endif %}
+
+
 {% if capabilities.any and chart %}
     <div class="row">
         <div class="col-md-12">
             <div class="panel">
                 <header class="panel-heading">
-                    {% blocktrans %}Daily cost in the past {{ days_ago }} days{% endblocktrans %} {% trans "(in &euro;)" %}
+                    {% blocktrans %}Daily cost{% endblocktrans %} {% trans "(in &euro;)" %}
                 </header>
                 <div class="panel-body">
                 	<canvas id="cost-chart" height="150"></canvas>
@@ -35,7 +83,7 @@
         <div class="col-md-12">
             <div class="panel">
                 <header class="panel-heading">
-                    {% blocktrans %}Daily electricity usage in the past {{ days_ago }} days{% endblocktrans %} {% trans "(in kWh)" %}
+                    {% blocktrans %}Daily electricity usage{% endblocktrans %} {% trans "(in kWh)" %}
                 </header>
                 <div class="panel-body">
                 	<canvas id="electricity-chart" height="150"></canvas>
@@ -51,7 +99,7 @@
         <div class="col-md-12">
             <div class="panel">
                 <header class="panel-heading">
-                    {% blocktrans %}Daily electricity returned in the past {{ days_ago }} days{% endblocktrans %} {% trans "(in kWh)" %}
+                    {% blocktrans %}Daily electricity returned{% endblocktrans %} {% trans "(in kWh)" %}
                 </header>
                 <div class="panel-body">
                     <canvas id="electricity-returned-chart" height="150"></canvas>
@@ -67,7 +115,7 @@
         <div class="col-md-12">
             <div class="panel">
                 <header class="panel-heading">
-                    {% blocktrans %}Daily gas usage in the past {{ days_ago }} days{% endblocktrans %} {% trans "(in m<sup>3</sup>)" %}
+                    {% blocktrans %}Daily gas usage{% endblocktrans %} {% trans "(in m<sup>3</sup>)" %}
                 </header>
                 <div class="panel-body">
                 	<canvas id="gas-chart" height="150"></canvas>
@@ -82,7 +130,7 @@
         <div class="col-md-12">
             <div class="panel">
                 <header class="panel-heading">
-                    {% blocktrans %}Daily average temperature in the past {{ days_ago }} days{% endblocktrans %} {% trans "(in &deg;C)" %}
+                    {% blocktrans %}Daily average temperature{% endblocktrans %} {% trans "(in &deg;C)" %}
                 </header>
                 <div class="panel-body">
                 {% if track_temperature %}
@@ -94,56 +142,6 @@
                 {% endif %}
                 </div><!-- /.panel-body -->
             </div><!-- /.panel -->
-        </div><!-- /.col -->
-    </div><!-- /.row -->
-{% endif %}
-
-{% if capabilities.any %}
-    <div class="row">
-        <div class="col-md-12">
-        {% for consumption in usage %}
-            <div class="panel">
-                <header class="panel-heading">
-                    {{ consumption.day|date:day_format }}
-                </header>
-                <div class="panel-body">
-                    <table class="table table-condensed">
-                        <tr>
-                            <th class="col-md-6"></th>
-                            <th class="col-md-2">{% if capabilities.electricity %}{% trans "Delivered" %} ({% trans "kWh" noop %}{% if capabilities.gas %} / {% trans "m<sup>3</sup>" noop %}{% endif %}){% endif %}</th>
-                            <th class="col-md-2">{% if capabilities.electricity_returned %}{% trans "Returned" %} ({% trans "kWh" noop %}){% endif %}</th>
-                            <th class="col-md-2">{% trans "Cost" %} (&euro;)</th>
-                        </tr>
-                        <tr>
-                            <td>{% if capabilities.electricity %}{% trans "Electricity 1 (off-peak)" %}{% endif %}</td>
-                            <td><span class="badge bg-red">{% if capabilities.electricity %}{{ consumption.electricity1|default:'-' }} </span>{% endif %}</td>
-                            <td><span class="badge bg-green">{% if capabilities.electricity_returned %}{{ consumption.electricity1_returned|default:'-' }}{% endif %}</span></td>
-                            <td><span class="badge bg-black">{% if capabilities.electricity %}{{ consumption.electricity1_cost|default:'-' }}{% endif %}</span></td>
-                        </tr>
-                        <tr>
-                            <td>{% if capabilities.electricity %}{% trans "Electricity 2 (peak)" %}{% endif %}</td>
-                            <td><span class="badge bg-red">{% if capabilities.electricity %}{{ consumption.electricity2|default:'-' }}{% endif %}</span></td>
-                            <td><span class="badge bg-green">{% if capabilities.electricity_returned %}{{ consumption.electricity2_returned|default:'-' }}{% endif %}</span></td>
-                            <td><span class="badge bg-black">{% if capabilities.electricity %}{{ consumption.electricity2_cost|default:'-' }}{% endif %}</span></td>
-                        </tr>
-                        <tr>
-                            <td> {% if capabilities.gas %}{% trans "Gas" %}{% endif %}</td>
-                            <td><span class="badge bg-orange">{% if capabilities.gas %}{{ consumption.gas|default:'-' }}{% endif %}</span></td>
-                            <td>&nbsp;</td>
-                            <td><span class="badge bg-black">{% if capabilities.gas %}{{ consumption.gas_cost|default:'-' }}{% endif %}</span></td>
-                        </tr>
-                        <tr>
-                            <td style="font-weight: bold;">{% trans "Total" %}</td>
-                            <td colspan="2">&nbsp;</td>
-                            <td><span class="badge bg-black">{{ consumption.total_cost|default:'-' }}</span></td>
-                        </tr>
-                    </table>
-                    {% for current_note in consumption.notes %}
-                    <div class="alert alert-warning" role="alert"><i class="fa fa-comments-o"></i> {{ current_note }}</div>
-                    {% endfor %}
-                </div><!-- /.panel-body -->
-            </div><!-- /.panel -->
-           {% endfor %}
         </div><!-- /.col -->
     </div><!-- /.row -->
 {% endif %}
