@@ -3,6 +3,7 @@
 
 v0.14 (β) - 2016-xx-xx
 ======================
+- Allow month archive (#66).
 - 
 
 
